syntax = "proto3";

import "ldproto/ldproto.proto";

package lsxcg.lss;

//
// Lotsize Solution Store Protocol
//

message IDsList{
	repeated string	ids = 1;
};

message Int32Result{
	int32	result = 1;
};

service LotsizeSolutionStore {
	// Problem/Solution management
	rpc ReadProblem(lsxcg.dt.ReadProblemRequest) returns (lsxcg.dt.ProblemIdentifier);
	rpc CreateSolution(lsxcg.dt.ProblemIdentifier) returns (lsxcg.dt.ProblemEntityIdentifier);

	// Solution Improvement
	rpc GetProblem(lsxcg.dt.ProblemIdentifier) returns (lsxcg.dt.Problem);
	rpc GetMachine(lsxcg.dt.ProblemEntityIdentifier) returns (lsxcg.dt.Machine);
	rpc GetDemandsForBucket(lsxcg.dt.ProblemBucketIdentifier) returns (stream lsxcg.dt.Demand);
	rpc GetSolutionsIDsList(lsxcg.dt.ProblemIdentifier) returns (IDsList);
	rpc GetSolution(lsxcg.dt.ProblemEntityIdentifier) returns (stream lsxcg.dt.Column);

	rpc SolutionImprovementStart(lsxcg.dt.ProblemEntityIdentifier) returns (lsxcg.dt.SolutionEntityIdentifier);
	rpc SolutionImprovementColsAdded(lsxcg.dt.SolutionEntityIdentifier) returns (Int32Result);
	rpc SolutionImprovementStop(lsxcg.dt.SolutionEntityIdentifier) returns (Int32Result);
};
